# laughing-guide

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EmployeeStatus.tsx  EmployeeTable.tsx  README.md  compose.yaml  config.yaml  go.mod  go.sum  google_cert.crt  main.go  main.py  pyproject.toml
.github/workflows/: ai.yaml  deploy.yaml  frontend.yaml
ai/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml
ai/src/: main.py
ai/src/ConnectionManager/: ConnectionManager.py
ai/src/application/web/controllers/: data_points_controller.py  query_controller.py
ai/src/config/: config.py
ai/src/constants/prompts/: prompts.py
ai/src/exports/: exports.py
ai/src/infastructure/repositories/: auth_repository.py  openai_repository.py  redis_repository.py  sqlite_query_repository.py  vector_db_repository.py
ai/src/internal/entities/: router_models.py
ai/src/internal/interfaces/services/: authentication_interface.py  query_interface.py
ai/src/internal/use_cases/: authentication_service.py  query_service.py
docs/: features.md  system_architecture.md  technical_details.md
frontend/: .env.example  Dockerfile  bun.lockb  package-lock.json  package.json  tailwind.config.ts
misc/: sample.csv
src/config/: config.go
src/database/: database.go
src/handler/: employeeHandler.go  fileHandler.go  handler.go  organizationHandler.go
src/helper/: helper.go  response.go  token.go
src/middleware/: middleware.go
src/repository/: awsRepository.go  databaseRepository.go  emailRepository.go  (+3 more)
(+79 files in other folders)
